--- a/web/index.html
+++ b/web/index.html
@@ -17,20 +17,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
+    <title>Keystone Medicine Fridge</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Navbar-Centered-Brand-Dark-icons.css">
 </head>
 
 <body class="body">
     <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-6"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#">Keystone Medicine Fridge</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-6"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse flex-grow-0 order-md-first" id="navcol-6">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link active" href="#">Temperature Monitor</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Graphs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="graphs.html">Graphs</a></li>
                 </ul>
-                <div class="d-md-none my-2"><button class="btn btn-light me-2" type="button">Button</button><button class="btn btn-primary" type="button">Button</button></div>
             </div>
         </div>
     </nav>
@@ -41,6 +40,7 @@
                     <div class="row align-items-center no-gutters">
                         <h1>Current Temperature is:</h1>
                         <h3 id="temperature"></h3>
+			<p id="time"></p>
                     </div>
                 </div>        
             </div>
@@ -55,7 +55,8 @@
                 return response.json();
             })
             .then(data => {
-                document.getElementById("temperature").innerText = data.temperature + "*C";
+                document.getElementById("temperature").innerText = data.Temp + "°C";
+		document.getElementById("time").innerText = "As of: " + data.Time;
             })
             .catch(error =>{
                 console.log("Failed to fetch");
